--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
             <a href="project2.html"><img src="images/tacos.png" alt="taco"></a>
         </article>
 
+        <article class="blue">
+            <a href="project3.html"><img src="images/music.png" alt="taco"></a>
+        </article>
+
+    
     </section>
 
+    <footer>
+        <span>&copy;2020 Made by Nathan</span>
+        <ul id="menuFooter">
+        </ul>
+    </footer>
 </body>
