--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="images/portrait.png" alt="me">
         <p class="black">Hello, my name is Nathan Ho <br>
         <br>
-        I'm a full time student at Eleven Fifthy Academy. I am taking the course of software development and have learned the basics of HTML/CSS and C#. <br> I have an interest in video game development and hope that through my various projects build the skills necessary to reach my career goal of one day becoming a game developer. <br>Here are some of my recent projects. Check them out!</p>
+        I'm a full time student at Year Up. Hoping to presude the path of QA, in this 12 month long program I am being trained to one day become a businesss professional in the IT industry. I have some knowledge coding HTML, CSS, and C#  <br>Here are some of my recent projects. Check them out!</p>
     </section>
 
     <section class="content">
