--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
         </article>
 
         <article class="blue">
-            <a href="project3.html"><img src="images/music.png" alt="taco"></a>
+            <a href="project3.html"><img src="images/music.png" alt="music"></a>
+        </article>
+        <article class="pink">
+            <a href="project4.html"><img src="images/Warmart.png" alt="API"></a>
         </article>
 
     
