--- a/project3.html
+++ b/project3.html
@@ -23,7 +23,7 @@
 
     <article class="inside">
         <h2 class="mint">MVC Application</h2>
-        <img src="images/music.png" alt="taco"  >
+        <img src="images/music.png" alt="music"  >
         <p class="blue"><strong>Challenge Statement:</strong> <br>The challenge of this project is to use C# to create a MVC Application of your choosing. 
         </p>
         <p class="pink"><strong>Solution:</strong> <br>I chose to make my project around music, so I created a MVC app to make a music store that allows users to buy,use,sell, and create music. I used html/css to make the design of the UI and made it simple and easy to navigate through. You can check it out here! <a href="https://github.com/NathanHo510/RedBadge-MVC/tree/master">MVC App</a>  </p>
